tests-integration/fixtures/checking/1772818740_do_final_let/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
test :: Effect Int
test' :: forall (t :: Type). (t :: Type)

Types

Diagnostics
error[InvalidFinalLet]: Invalid final let statement in do expression
  --> 7:3..7:12
  |
7 |   let x = 1
  |   ^~~~~~~~~
error[InvalidFinalLet]: Invalid final let statement in do expression
  --> 10:3..10:12
   |
10 |   let x = 1
   |   ^~~~~~~~~
